fixed link icon being invisible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1212,6 +1212,7 @@ body.dark .form-feedback.error {
 
 .icon {
     margin-right: 10px;
+    color: var(--text-dark);
 }
 
 /* =========================
